2002-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Unbind the key "N" to the command
	`w3m-namazu' in order to avoid binding collision to
	`w3m-view-next-page'.  Thanks to Satoshi TAOKA for his report.
	(w3m-mode): Fix its docstring for `w3m-antenna-add-current-url'.
	Thanks to Satoshi TAOKA and Yoichi NAKAYAMA for the advice.

2002-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Ignore byte-compile warnings for the dummy autoloads,
	mis-judging of cl run-time functions and the obsoleteness of
	`make-local-hook' under Emacs CVS.

2002-09-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Do not compile
	`mew-shimbun.el' with old Mew.

	* mew-w3m.el (top): Avoid byte-compile error and warning for old
	Mew. Do not push 'mew-w3m-cid-retrieve' for old Mew.

2002-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-setup): Use 0 instead of nil as the initial
	value for the new obarray.

	* w3m-filter.el (w3m-filter-setup): Use 0 instead of nil as the
	initial value for the new obarray.

2002-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-mode): Fix typo in its docstring.

2002-09-20  Kahlil HODGSON  <dorge@tpg.com.au>

	* w3m.el (w3m-fontify-bold): Permit class attributes, newlines or
	whitespaces in the tag.
	(w3m-fontify-underline): Ditto.

2002-09-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-treat-drive-letter): New constant.
	(w3m-url-to-file-name): Check `w3m-treat-drive-letter'.

	* w3m-dtree.el (w3m-dtree-directory-name): Check
	`w3m-treat-drive-letter'.

2002-09-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-unseen-remove-one): Use
	`mew-cinfo-set-fld|msg|time|size' instead of `mew-cinfo-set'.

2002-09-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.2.
	(w3m-init-file): Changed its default value.

	* Makefile.in (PACKAGE): Use `emacs-w3m' instead of `w3m_el'.
