@@ -149,6 +149,11 @@ will not be substituted.")
   ;; is `(list [up] [right] [left] [down])'.
   "List of keys which should not be bound for the emacs-w3m commands.")
 
+(defvar mime-w3m-mode-ignored-keys nil
+  ;; In Gnus, the default value for `mm-w3m-mode-ignored-keys' is
+  ;; `(list [down-mouse-2])
+  "List of keys which should ignore.")
+
 (defsubst mime-w3m-setup ()
   "Setup `mime-w3m' module."
   (require 'w3m)
@@ -166,6 +171,10 @@ will not be substituted.")
     (dolist (key mime-w3m-mode-dont-bind-keys)
       (condition-case nil
 	  (define-key mime-w3m-mode-map key nil)
+	(error)))
+    (dolist (key mime-w3m-mode-ignored-keys)
+      (condition-case nil
+	  (define-key mime-w3m-mode-map key 'ignore)
 	(error)))
     ;; override widget.
     (if (featurep 'xemacs)
